--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Main headline -->
         <h1>Cleaner Water for A Healthier World</h1>
         <!-- Subheadline -->
-        <p>Join us in bringing safe, clean water to communities in need.</p>
+        <p>Join a global movement bringing clean, life-changing water to people in need around the world — because every person deserves dignity, good health and a bright future.</p>
     </section>
 
     <!-- Story Section: This tells the story of the nonprofit -->
